[package]
name = "bors"
description = "This is a very basic library for serialization and deserialization."
license = "Apache-2.0"
version = "1.1.2"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false }
const-sha1 = { version = "0.2.0", git = "https://github.com/radixdlt/const-sha1", default-features = false }

[features]
default = ["std"]
std = ["hex/std"]
alloc = ["hex/alloc"]

[lib]
doctest = false
bench = false